--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next-mdx-remote": "^2.1.3",
     "normalize.css": "^8.0.1",
     "react": "17.0.2",
+    "react-calendar": "^3.4.0",
     "react-dom": "17.0.2",
     "react-instagram-embed": "^2.0.0",
     "react-schemaorg": "^1.3.1",
