--- a/config.json
+++ b/config.json
@@ -12,5 +12,6 @@
   ],
   "posts_per_page": 5,
   "twitter_account": "@my-account",
-  "github_account": "wutali"
+  "github_account": "wutali",
+  "published": false
 }
