--- a/config.json
+++ b/config.json
@@ -13,5 +13,5 @@
   "posts_per_page": 5,
   "twitter_account": "@my-account",
   "github_account": "wutali",
-  "published": true
+  "published": false
 }
