update home page images

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "base_url": "https://wutali-nextjs-netlify-blog.netlify.app",
+  "base_url": "https://www.orionstellar.com/",
   "site_title": "OrionStellar",
   "site_description": "Digital transformation for you",
   "site_keywords": [
