--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-calendar": "^3.4.0",
     "react-dom": "17.0.2",
     "react-instagram-embed": "^2.0.0",
+    "react-player": "^2.9.0",
     "react-schemaorg": "^1.3.1",
     "react-scroll-parallax": "^2.4.0",
     "react-twitter-embed": "^3.0.3",
